@@ -2,13 +2,13 @@ package it.gov.pagopa.register.service.operation;
 
 import it.gov.pagopa.register.connector.notification.NotificationService;
 import it.gov.pagopa.register.constants.AssetRegisterConstants;
+import it.gov.pagopa.register.dto.operation.EmailProductDTO;
 import it.gov.pagopa.register.dto.operation.ProductDTO;
 import it.gov.pagopa.register.dto.operation.ProductListDTO;
 import it.gov.pagopa.register.dto.operation.UpdateResultDTO;
 import it.gov.pagopa.register.enums.ProductStatusEnum;
 import it.gov.pagopa.register.mapper.operation.ProductMapper;
 import it.gov.pagopa.register.model.operation.Product;
-import it.gov.pagopa.register.repository.operation.ProductFileRepository;
 import it.gov.pagopa.register.repository.operation.ProductRepository;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
@@ -18,21 +18,16 @@ import org.springframework.data.support.PageableExecutionUtils;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 public class ProductService{
 
   private final ProductRepository productRepository;
-  private final ProductFileRepository productFileRepository;
   private final NotificationService notificationService;
-  public ProductService(ProductRepository productRepository, ProductFileRepository productFileRepository, NotificationService notificationService) {
+  public ProductService(ProductRepository productRepository, NotificationService notificationService) {
     this.productRepository = productRepository;
-    this.productFileRepository = productFileRepository;
     this.notificationService = notificationService;
   }
 
@@ -51,7 +46,6 @@ public class ProductService{
       organizationId, category, productFileId, eprelCode, gtinCode,productName,status);
 
     Criteria criteria = productRepository.getCriteria(organizationId, category, productFileId, eprelCode, gtinCode,productName, status);
-
     List<Product> entities = productRepository.findByFilter(criteria, pageable);
     Long count = productRepository.getCount(criteria);
 
@@ -72,11 +66,11 @@ public class ProductService{
       .build();
   }
 
-  public UpdateResultDTO updateProductState(String organizationId, List<String> productIds, ProductStatusEnum newStatus, String motivation) {
-    log.info("[UPDATE_PRODUCT_STATUSES] - Starting update for organizationId: {}, newStatus: {}, motivation: {}", organizationId, newStatus, motivation);
+  public UpdateResultDTO updateProductState(List<String> productIds, ProductStatusEnum newStatus, String motivation, String role) {
+    log.info("[UPDATE_PRODUCT_STATUSES] - Starting update - newStatus: {}, motivation: {}",  newStatus, motivation);
     log.debug("[UPDATE_PRODUCT_STATUSES] - Product IDs to update: {}", productIds);
 
-    List<Product> productsToUpdate = productRepository.findByIdsAndOrganizationIdAndNeStatus(productIds, organizationId,newStatus.name());
+    List<Product> productsToUpdate = productRepository.findByIdsAndValidStatusByRole(productIds, newStatus.name(), role);
     log.debug("[UPDATE_PRODUCT_STATUSES] - Retrieved {} products for update", productsToUpdate.size());
 
     productsToUpdate.forEach(product -> {
@@ -88,47 +82,32 @@ public class ProductService{
     List<Product> productsUpdated = productRepository.saveAll(productsToUpdate);
     log.info("[UPDATE_PRODUCT_STATUSES] - Successfully updated {} products", productsUpdated.size());
 
-    Map<String, List<String>> productFileIdToProductNames = productsUpdated.stream()
-      .collect(Collectors.groupingBy(
-        Product::getProductFileId,
-        Collectors.mapping(Product::getProductName, Collectors.toList())
-      ));
-    log.debug("[UPDATE_PRODUCT_STATUSES] - Grouped products by product file ID: {}", productFileIdToProductNames);
+    List<EmailProductDTO> emailToProducts = productRepository.getProductNamesGroupedByEmail(productsUpdated.stream().map(Product::getGtinCode).toList());
 
-    Map<String, List<String>> userEmailToFileIds = new HashMap<>();
-    productFileIdToProductNames.keySet().forEach(fileId ->
-      productFileRepository.findById(fileId).ifPresent(file -> {
-        log.debug("[UPDATE_PRODUCT_STATUSES] - Found file {} for user {}", fileId, file.getUserEmail());
-        userEmailToFileIds
-          .computeIfAbsent(file.getUserEmail(), k -> new ArrayList<>())
-          .add(fileId);
-      })
-    );
-    log.debug("[UPDATE_PRODUCT_STATUSES] - Mapped user emails to file IDs: {}", userEmailToFileIds);
+    List<String> failedEmails = new ArrayList<>();
 
-    Map<String, List<String>> userEmailToProductNames = new HashMap<>();
-    userEmailToFileIds.forEach((email, fileIds) -> {
-      List<String> productNames = fileIds.stream()
-        .flatMap(fileId -> productFileIdToProductNames.getOrDefault(fileId, List.of()).stream())
-        .toList();
-      userEmailToProductNames.put(email, productNames);
-      log.trace("[UPDATE_PRODUCT_STATUSES] - User {} will be notified for products: {}", email, productNames);
-    });
-
-    try{
-      userEmailToProductNames.forEach((email, productNames) -> {
-        log.info("[UPDATE_PRODUCT_STATUSES] - Sending notification to {} for {} products", email, productNames.size());
-        notificationService.sendEmailUpdateStatus(productNames, motivation, newStatus.name(), email);
-      });
-    }
-    catch (Exception e){
-      log.error("[UPDATE_PRODUCT_STATUSES] Error: {}",e.getMessage());
-      return  UpdateResultDTO.ko(AssetRegisterConstants.UpdateKeyConstant.EMAIL_ERROR_KEY);
+    for (EmailProductDTO dto : emailToProducts) {
+      try {
+        notificationService.sendEmailUpdateStatus(
+          dto.getProductNames(),
+          motivation,
+          newStatus.name(),
+          dto.getId()
+        );
+      } catch (Exception e) {
+        log.debug("[UPDATE_PRODUCT_STATUSES] - Failed to send email to {}: {}", dto.getId(), e.getMessage());
+        failedEmails.add(dto.getId());
+      }
     }
 
-    log.info("[UPDATE_PRODUCT_STATUSES] - Update process completed");
+    if (!failedEmails.isEmpty()) {
+      log.warn("[UPDATE_PRODUCT_STATUSES] - Some email notifications failed. Total failures: {}", failedEmails.size());
+      return UpdateResultDTO.ko(AssetRegisterConstants.UpdateKeyConstant.EMAIL_ERROR_KEY);
+    }
 
+    log.info("[UPDATE_PRODUCT_STATUSES] - All notifications sent successfully");
     return UpdateResultDTO.ok();
+
   }
 
 
